@@ -43,6 +43,10 @@ function setActiveStyleSheet(title) {
 <div id="bottomLeftLeft">
 <h2>Latest News</h2>
 
+<h3><a href="http://www.gnomejournal.org/">The GNOME Journal, June Edition</a></h3>
+<p>The latest issue of the GNOME Journal has just been published. GNOME Journal
+is an online magazine devoted to everything surrounding the GNOME Desktop.</p>
+
 <h3><a href="http://www.gnome.org/mobile/">The GNOME Mobile & Embedded Initative</a></h3>
 <p>The GNOME Foundation has announced the creation of the GNOME Mobile &amp; Embedded
 Initiative (GMAE), and a software platform for user experience development
@@ -57,10 +61,6 @@ organizations they represent.</p>
 Learn more about this release through the <a
 href="http://www.gnome.org/start/2.18/">GNOME 2.18 start page</a> and the
 detailed <a href="http://www.gnome.org/start/2.18/notes/C/">release notes</a>.</p>
-
-<h3><a href="http://www.gnomejournal.org/">The GNOME Journal, March Edition</a></h3>
-<p>The latest issue of the GNOME Journal has just been published. GNOME Journal
-is an online magazine devoted to everything surrounding the GNOME Desktop.</p>
 
 </div>
 
