@@ -1,3 +1,8 @@
+2007-06-24  Lucas Rocha  <lucasr@gnome.org>
+
+	* www.gnome.org/index.html: updated GNOME Journal June Edition
+	announcement in latest news.
+
 2007-06-14  Richard Hughes  <richard@hughsie.com>
 
 	* www.gnome.org/projects/gnome-power-manager/bugs.html:
